--- a/minecraft.html
+++ b/minecraft.html
@@ -173,7 +173,7 @@
         <div id="title">
             <h1 id="title" id="top">Minecraft Introduce</h1>
             <h1 id="subtitle">Minecraft 介绍</h1>
-            <a href="homepage.html" id="back">返回Minecraft Wiki首页</a>
+            <a href="index.html" id="back">返回Minecraft Wiki首页</a>
             <br>
             <br>
             <marquee behavior="scroll" direction="left" scrollamount="5">
