--- a/questionnaire_end.html
+++ b/questionnaire_end.html
@@ -138,7 +138,7 @@
         <div id="title">
             <h1 id="title">Minecraft Questionnaire</h1>
             <h1 id="subtitle">Minecraft 问卷</h1>
-            <a href="homepage.html" id="back">返回Minecraft Wiki首页</a>
+            <a href="index.html" id="back">返回Minecraft Wiki首页</a>
             <br>
             <br>
             <marquee behavior="scroll" direction="left" scrollamount="5">
