--- a/video.html
+++ b/video.html
@@ -158,7 +158,7 @@
         <div id="title">
             <h1 id="title" id="top">Minecraft Video</h1>
             <h1 id="subtitle">Minecraft 视频</h1>
-            <a href="homepage.html" id="back">返回Minecraft Wiki首页</a>
+            <a href="index.html" id="back">返回Minecraft Wiki首页</a>
             <br>
             <br>
             <marquee behavior="scroll" direction="left" scrollamount="5">
